# thesis

./: .gitignore  .mcp.json  0.dataset.ipynb  1.mediapipe.ipynb  2.islr.ipynb  2.model.ipynb  3.pipeline.ipynb  CLAUDE.md  README.md  TODO.md  mise.toml  pyproject.toml  system_space_check.ps1
docs/: 2026-07-15.md  README.md
docs/daily/: 2026-07-18.md
docs/logs/daily/: 2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md
docs/logs/weekly/: 2026-29.md  2026-30.md
docs/reports/: confidence-tuning.md
modules/: datasets.py
scripts/: benchmark.py  data_config.py  eval_gru.py  gislr_dataset.py  models.py  run_all.py  train.py
src/: gislr.0.competition.entry.1st.ipynb  gislr.0.dataset.motion-energy.ipynb  gislr.0.dataset.subset-comparison.ipynb  gislr.1.model.bilstm.ipynb  gislr.1.model.cnn1d.ipynb  gislr.1.model.gru.ipynb  gislr.1.model.lstm.ipynb  gislr.1.models.training.ipynb  gislr.2.models.evaluation.ipynb  popsign.0.dataset.confidence-tuning.ipynb  popsign.0.dataset.extraction.ipynb  popsign.0.dataset.output-inspection.ipynb
src/config/: gislr.training.json
src/data/models/: index.csv
src/data/models/1784385530/: meta.json
src/data/models/1784386490/: meta.json
src/data/models/1784387336/: meta.json
src/data/models/1784388482/: meta.json
src/models/: README.md
src/modules/: paths.py
src/modules/model/: __init__.py  architectures.py  config.py  data.py  export.py  keras_export.py  registry.py  report.py  submission.py  train.py
src/modules/scripts/: build_model_index.py  eval_gru.py  extract_popsign.py  tune_confidence.py
(+143 files in other folders)
