[project]
    name = "sign2speech"
    version = "0.1.0"
    description = "Streaming sign language recognition — landmark-sequence models (GISLR/POPSIGN) with real-time, frame-by-frame inference as the deployment target"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "dask[complete]>=2026.7.0",
        "duckdb>=1.5.4",
        "jupyter>=1.1.1",
        "kaggle>=1.6.17",
        "kagglehub>=1.0.2",
        "matplotlib>=3.11.0",
        "mediapipe>=0.10.35",
        "numpy>=2.5.1",
        # NOTE: the onnx / onnx2tf / onnxruntime chain was removed 2026-07-19.
        # TFLite export goes PyTorch -> native Keras rebuild -> TFLite
        # (modules/model/keras_export.py); onnx2tf could not convert 3 of the 4
        # architectures. See TODO §6.2.
        "opencv-python>=5.0.0.93",
        "pandas>=3.0.3",
        "pyarrow>=24.0.0",
        "pyrefly>=1.1.1",
        "scikit-learn>=1.9.0",
        "seaborn>=0.13.2",
        "tensorflow>=2.21.0",
        "torch>=2.13.0",
    ]

[dependency-groups]
    dev = ["ty>=0.0.59", "types-tqdm>=4.68.0.20260608"]


[[tool.uv.index]]
    name     = "pytorch-cuda"
    url      = "https://download.pytorch.org/whl/cu130"
    explicit = true

[tool.uv.sources]
    torch = { index = "pytorch-cuda" }

[tool.ty.environment]
    python = "./.venv"
